--- a/src/views/layout/peak-layout.scss
+++ b/src/views/layout/peak-layout.scss
@@ -34,13 +34,6 @@
         max-width: $max-content-width;
         padding-top: $vertical-padding;
         padding-bottom: $vertical-padding;
-
-        .slate-Selectable {
-          button {
-            display: flex;
-            overflow: auto!important;
-          }
-        }
       }
     }
   }
